--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -26,10 +26,10 @@ Wird das `PrintServiceWindow` gestartet, sieht der Benutzer links oben in der Li
 === Ergänzende Hinweise 
 Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#add-books[siehe Add Books]. Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
 
-.Book Preview
+===== Book Preview
 image:BookPreview.gif[]
 
-.Add Books
+===== Add Books
 image:AddBooks.gif[]
 
 == Übersicht über die Solution
@@ -65,7 +65,7 @@ Jede `View` hat auch ein `ViewModel`, somit wurde in dem Projekt `Logic.Ui` im O
 Zudem wurde die Klasse `OpenPrintServiceWindow.cs` erstellt, diese dient für den `MessageBus`, damit aus dem Hauptfenster das Fenster der Druckfunktion geöffnet werden kann.
 
 *Als Service:* +
-Da die Druckfunktion als Service zu sehen ist, wurde im Ordner `Services` eine neue Klassenbibliothek `Service.PrintService` angelegt. In dieser Klassenbibliothek befindet sich die Klasse `PrintBookService.cs`, welche die Logik des Service beinhaltet.
+Da die Druckfunktion als Service zu sehen ist, wurde im Ordner `Services` eine neue Klassenbibliothek `Service.PrintService` angelegt. In dieser Klassenbibliothek befindet sich die Klasse `PrintBookService.cs`, welche die Logik des Service beinhaltet. Hier wurde der NamesSpace `De.HsFlensburg.ClientApp011.Services.PrintService` verwendet.
 
 === UML-Diagramm
 image:UML.svg[]
@@ -219,4 +219,23 @@ image:FlowDocumentExport.png[]
 ==== Layout
 Das Layout besteht aus zwei Tabellen. Die erste Tabelle `MainTable`, besteht aus einer Reihe und zwei Spalten. In der ersten Spalte befindet sich das `Cover Image` vom Buch. In der zweiten Spalte befindet sich eine weitere Tabelle `ContentTable`. Diese Tabelle wird dazu verwendet, die Metadaten des Buches strukturiert anzeigen zu können. Die ContentTable besteht dabei aus 4 Reihen und 4 Spalten, wo sich die jeweiligen Überschriften wie `Title, Author, Genre, Preis und Kurzbeschreibung`, sowie die entsprechenden Attribute beinhaltet. Die Reihen Kurzbeschreibung und das dazugehörige Attribut erstrecken sich über die 4 Spalten.
 
+Die Überschrift der Attribute ist in der Schriftart Arial und Fett. Die jeweiligen Attribute in der Schriftart Consolas.
+
 image:FlowDocumentLayout.png[]
+
+==== Funktion
+Im ViewModel wird die Liste mit den Büchern, welche ausgedruckt werden sollen, an den Konstruktor des Objektes `PrintBookService` übergeben. Zudem wird im Konstruktor der Klassenvariable `flowDocument`, das entsprechende zugehörige Objekt `FlowDocument()` zugewiesen. Anschließend wird die Methode `BookDokument(BookCollection bookCollection)` aufgerufen. Diese Methode ist dafür zuständig, die Daten aus der Collection in ein `FlowDocument` umzuwandeln. Die Methode iteriert durch die Collection und legt für jeden Eintrag bzw. jedes Buch eine Tabelle an, welche dann dem FlowDocument hinzugefügt wird. Durch das Refactoring wurden mehrere Hilfsmethoden entwickelt, um den Code zu strukturieren. 
+
+Eine der wichtigsten Hilfsmethode ist hier `SetRowContent()`. Diese Methode befüllt die jeweilige Reihe der Content Table. Als Parameter erhält diese Methode die aktuelle `TableRow`, den `Content`, die `FontFamily` sowie die `FontWeights`.
+
+[source, c#]
+----
+// First Column fill with Headers
+String[] headers = { "Title:", "Author:", "Genre:", "Preis:" };
+SetRowContent(contentTable.RowGroups[0].Rows[0], headers, arial, FontWeights.Bold);
+// Second Column fill with Content
+String[] content = { book.Title, book.Author, book.Genre.ToString(), book.Price.ToString() };
+SetRowContent(contentTable.RowGroups[0].Rows[1], content, consolas, FontWeights.Normal);
+----
+
+Mit der Methode `Printing()` wird nun das Windows eigene Druckfenster geöffnet und das `FlowDocument` wird an den Drucker übergeben, welche der User über das `PrintDialog` ausgewählt hat.
