--- a/Doku/cedrik_hoffmann/README.adoc
+++ b/Doku/cedrik_hoffmann/README.adoc
@@ -21,10 +21,10 @@ Wird das Programm gestartet, ladet der User auf der Startseite des Programmes. S
 image:UI.PNG[]
 
 === Walkthrough
-Wird das `PrintServiceWindow` gestartet, sieht der Benutzer links oben in der Liste `All Books` alle Bücher, welche in der Anwendung bereits angelegt wurden. Unter der Liste befinden sich zwei Buttons, um die gewählten Bücher zur Auswahl hinzuzufügen `[ADD]`, oder das Buch aus der Liste wieder zu entfernen `[REMOVE]`. Die ausgewählten Bücher, welche in der Liste `Selected Books` zu sehen sind, werden anschließend in einer Liste ausgedruckt. Unter dieser Liste verbergen sich wiederum zwei Buttons. Zum einen, um den Druckvorgang zu starten `[PRINT]` und zum anderen, um das Fenster zu schließen `[CLOSE]`, um wieder zur Startseite zu gelangen. Wählt der Benutzer ein Buch in der Liste `All Books` aus, wird die Vorschau mit den entsprechenden Metadaten des Buches angepasst, welches angeklickt wurde https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#book-preview[siehe Book Preview]. Hat der Benutzer die Bücher, welche ausgedruckt werden sollen, der Liste `Selected Books` hinzugefügt, kann der Benutzer über den Button `[PRINT]` den Druckvorgang starten. Es öffnet sich nun das Standard Windows Druckerfenster, wo der Benutzer seinen Drucker auswählen kann und somit die Liste der Bücher ausgedruckt wird.
+Wird das `PrintServiceWindow` gestartet, sieht der Benutzer links oben in der Liste `All Books` alle Bücher, welche in der Anwendung bereits angelegt wurden. Unter der Liste befinden sich zwei Buttons, um die gewählten Bücher zur Auswahl hinzuzufügen `[ADD]`, oder das Buch aus der Liste wieder zu entfernen `[REMOVE]`. Die ausgewählten Bücher, welche in der Liste `Selected Books` zu sehen sind, werden anschließend in einer Liste ausgedruckt. Unter dieser Liste verbergen sich wiederum zwei Buttons. Zum einen, um den Druckvorgang zu starten `[PRINT]` und zum anderen, um das Fenster zu schließen `[CLOSE]`, um wieder zur Startseite zu gelangen. Wählt der Benutzer ein Buch in der Liste `All Books` aus, wird die Vorschau mit den entsprechenden Metadaten des Buches angepasst, welches angeklickt wurde https://github.com/choffmann/hsfl-awp-clientapp011/tree/main/Doku/cedrik_hoffmann#book-preview[siehe Book Preview]. Hat der Benutzer die Bücher, welche ausgedruckt werden sollen, der Liste `Selected Books` hinzugefügt, kann der Benutzer über den Button `[PRINT]` den Druckvorgang starten. Es öffnet sich nun das Standard Windows Druckerfenster, wo der Benutzer seinen Drucker auswählen kann und somit die Liste der Bücher ausgedruckt wird.
 
 === Ergänzende Hinweise 
-Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#add-books[siehe Add Books]. Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
+Der Benutzer hat die Möglichkeit, mittels `STGR + <KLICK AUF BUCH>` mehrere Bücher in der Liste `All Books` auszuwählen. Somit können mehrere Bücher gleichzeitig zur `Selected Book` Liste hinzugefügt werden https://github.com/choffmann/hsfl-awp-clientapp011/tree/main/Doku/cedrik_hoffmann#[siehe Add Books]. Es muss zwingend `>= 1` Buch in der Liste `Selected Books` beim Starten des Druckvorgangs vorhanden sein, ansonsten erscheint eine Meldung, dass nicht genug Bücher in der Liste vorhanden sind und der Druckvorgang wird abgebrochen.
 
 ===== Book Preview
 image:BookPreview.gif[]
@@ -91,7 +91,7 @@ Die `BookPreview` dient nur zur Vorschau der Daten des Buches, welches vom User 
 ==== Funktion
 Die Bücher in der Liste `All Books` sind in einer 'BookCollectionViewModel' im ViewModel gespeichert. Beim Starten des UI-Fensters, wird die `BookCollectionViewModel` mit den angelegten Büchern an das `PrintServiceWindowViewModel` im `ViewModelLocator` übergeben. Da die UI übers `Binding` Zugriff auf das `PrintServiceWindowViewModel` hat, kann die UI mittels einer `ListView` die Daten von der Collection in einer Liste anzeigen.
 
-Die Liste `Selected Books` ist ähnlich wie die Liste `All Books` aufgebaut. Diese besteht auch aus einer Collection des Typen `BookCollectionViewModel`. Wird über den Button `[ADD]` ein oder mehrere Bücher ausgewählt, werden diese Bücher im ViewModel der Collection `CheckedBooks` hinzugefügt, welche in der View dann angezeigt wird. Dazu übergibt die View mittels des `RelayCommands mit Parametern` die Bücher, welche vom Benutzer selektiert wurden, an das ViewModel. Diese werden in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das ViewModel gesendet. Ähnliche Logik verbirgt sich auch hinter den Button `[REMOVE]`, nur das hier entsprechend die übergebenen Bücher der Collection `CheckedBooks` entfernt werden. Die genauere Logik hierhinter wird in dem Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#33-viewmodel---printservicewindowviewmodel[ViewModel] genauer erläutert.
+Die Liste `Selected Books` ist ähnlich wie die Liste `All Books` aufgebaut. Diese besteht auch aus einer Collection des Typen `BookCollectionViewModel`. Wird über den Button `[ADD]` ein oder mehrere Bücher ausgewählt, werden diese Bücher im ViewModel der Collection `CheckedBooks` hinzugefügt, welche in der View dann angezeigt wird. Dazu übergibt die View mittels des `RelayCommands mit Parametern` die Bücher, welche vom Benutzer selektiert wurden, an das ViewModel. Diese werden in der `ListView` als `System.Windows.Controls.SelectedItemCollection` an das ViewModel gesendet. Ähnliche Logik verbirgt sich auch hinter den Button `[REMOVE]`, nur das hier entsprechend die übergebenen Bücher der Collection `CheckedBooks` entfernt werden. Die genauere Logik hierhinter wird in dem Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/main/Doku/cedrik_hoffmann#33-die-viewmodel-schicht[ViewModel] genauer erläutert.
 
 [source, xaml]
 ----
@@ -206,7 +206,7 @@ private bool CheckItemIsInCheckedBooks(BookViewModel currentBook) {
 wählt der User ein Buch aus, welches aus der Liste entfernt werden soll, ist die Logik ähnlich wie das hinzufügen eines Buches. Die View schickt auch hier eine Collection des Typen `SelectedItemCollection`. Auch hier wird der Inhalt der Collection zu `BookViewModel` gecastet. Anschließend werden die Bücher in der Collection `CheckedBooks` über die Methode `Remove()` entfernt.
 
 *User möchte die ausgewählten Bücher ausdrucken:* +
-Ist die Liste `Selected Books` gefüllt und der User startet den Druckvorgang, wird die Methode `PrintBooksCommand()` ausgeführt. Hier ist die Besonderheit, dass überprüft wird, ob sich mindestens ein Buch in der Collection `CheckedBooks` befindet. Ist dies der Fall, wird die Collection an das Objekt `PrintBookService` übergeben, welches die Daten der Collection in ein `FlowDocument` konvertiert. (Näheres dazu im Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/update_doc/Doku/cedrik_hoffmann#33-viewmodel---printservicewindowviewmodel[Service Schicht]). Befindet sich kein Buch in der Collection, wird eine `MessageBox` erstellt, welche dem User mitteilt, dass sich mindestens ein Buch in der Liste befinden muss.
+Ist die Liste `Selected Books` gefüllt und der User startet den Druckvorgang, wird die Methode `PrintBooksCommand()` ausgeführt. Hier ist die Besonderheit, dass überprüft wird, ob sich mindestens ein Buch in der Collection `CheckedBooks` befindet. Ist dies der Fall, wird die Collection an das Objekt `PrintBookService` übergeben, welches die Daten der Collection in ein `FlowDocument` konvertiert. (Näheres dazu im Kapitel https://github.com/choffmann/hsfl-awp-clientapp011/tree/main/Doku/cedrik_hoffmann#34-die-service-schicht[Service Schicht]). Befindet sich kein Buch in der Collection, wird eine `MessageBox` erstellt, welche dem User mitteilt, dass sich mindestens ein Buch in der Liste befinden muss.
 
 *User schließt das Fenster:* +
 schließt der User über den Button `[CLOSE]` das `PrintService` Fenster, wird die Methode `CloseWindowCommand(object param)` ausgeführt. Diese ist analog zu der Methode, welche im Skript vorgestellt wurde. Allerdings wird hier noch vor dem schließen die Collection `CheckedBooks` mittels der Methode `Clear()` geleert, damit diese beim neu Aufruf des Fensters leer ist. 
